@@ -1,0 +1,4 @@
+A basic test for JS execution on secondary threads. Passes if the browser didn't crash.
+
+DONE
+
