@@ -1,0 +1,28 @@
+<body>
+<p>A basic test for JS execution on secondary threads. Passes if the browser didn't crash.</p>
+<div id=result></div>
+<script>
+function log(message)
+{
+    document.getElementById("result").innerHTML += message + "<br>";
+}
+
+if (window.layoutTestController) {
+    layoutTestController.dumpAsText();
+    layoutTestController.waitUntilDone();
+}
+
+var worker1 = new Worker('resources/stress-js-execution.js');
+var worker2 = new Worker('resources/stress-js-execution.js');
+
+worker1.onmessage = function(evt) {
+    log(evt.data);
+}
+
+worker2.onmessage = worker1.onmessage;
+
+setTimeout("log('DONE'); if (window.layoutTestController) layoutTestController.notifyDone();", 1000);
+
+</script>
+</body>
+</html>
