@@ -1,3 +1,15 @@
+2008-11-21  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by Geoff Garen.
+
+        https://bugs.webkit.org/show_bug.cgi?id=22400
+        Add a stress test for concurrent JS execution
+
+        * fast/workers/resources/stress-js-execution.js: Added.
+        * fast/workers/stress-js-execution-expected.txt: Added.
+        * fast/workers/stress-js-execution.html: Added.
+        Tests that the basics don't cause a crash.
+
 2008-11-21  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by Darin Adler.
